@@ -1,7 +1,9 @@
 2005-12-29  Kazuhiko  <kazuhiko@fdiary.net>
+	* plugin/02help.rb: code cleanup by NAGASAKI.
+
 	* style/default/hikidoc.rb: sync with hikidoc rev.35.
 	  support relative inline URLs.
-	  fix parse_table (closes #44).
+	  fix parse_table (reported by H.M) (closes #44).
 
 	* misc/plugin/quote_page.rb: revise for current hiki (closes #47).
 	* style/default/parser.rb (parse): add a second argument to
